[package]
name = "chapter1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tardyai = { path = "../tardyai" }
env_logger = { workspace = true }
log = { workspace = true }
dfdx = { workspace = true }
ordered-float = "4.1.1"
