[package]
name = "tardyai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { version = "0.11.22", features = ["blocking"] }
thiserror = "1.0.50"
homedir = "0.2.1"
