[package]
name = "tardyai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = { workspace = true }
dfdx-core = { workspace = true }
dfdx-derives = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { version = "0.11.22", features = ["blocking"] }
thiserror = "1.0.50"
homedir = "0.2.1"
flate2 = { version = "1.0.28", features = ["rust_backend"] }
tar = "0.4.40"
walkdir = "2.4.0"
image = "0.24.7"
dashmap = { version = "5.5.3", features = ["rayon", "serde"] }
safetensors = "0.4.0"
memmap2 = "0.9.0"
num-traits = "0.2.17"
ouroboros = "0.18.0"
rand = "0.8.5"
indicatif = { version = "0.17.7", features = ["rayon"] }

[features]
default = []

cuda = [ "dfdx/cuda", "dfdx/cudnn" ]
